--- a/weekend/styleprofile.css
+++ b/weekend/styleprofile.css
@@ -270,6 +270,9 @@ body {
     background-color: grey;
     border: none;
     border-radius: 5px;
+    font-weight: 600;
+    font-weight: bold;
+    color: white;
 }
 
 .btn2 {
